Fix word wrap on art titles

--- a/src/pages/ChicagoArt/ChicagoArt.css
+++ b/src/pages/ChicagoArt/ChicagoArt.css
@@ -25,6 +25,7 @@ input {
     display: block;
     text-align: center;
     margin: 1rem;
+    width:  25rem;
 }
 
 .art-listing img {
